Give post meta a fixed line height so cover image aligns with blurbs in the sidebar

--- a/_scss/pages/_blog.scss
+++ b/_scss/pages/_blog.scss
@@ -15,6 +15,7 @@
 .post-meta {
   @extend .large;
   color: $color-highlight;
+  line-height: 30px;
 }
 
 .post-img {
